syntax = "proto3";
package scheduler;

option go_package = "go.easyops.local/contracts/protorepo-models/easyops/model/scheduler";




import "google/protobuf/struct.proto";

/*
定时任务
*/
message SchedulerTask {
message CmdConfig {
    /*
    uri
    */
    string url = 1 ;
    /*
    名字服务
    */
    string service_name = 2 ;
    /*
    端口
    */
    int32 port = 3 ;
    /*
    名字服务
    */
    string host = 4 ;
    /*
    http 请求
    */
    string method = 5 ;
    /*
    请求头
    */
    google.protobuf.Struct headers = 6 ;
    /*
    参数
    */
    google.protobuf.Struct params = 7 ;
}
        
message Annotations {
    /*
    应用ID
    */
    string appId = 1 ;
}
        
message Callback {
    /*
    url
    */
    string url = 1 ;
    /*
    header host
    */
    string host = 2 ;
    /*
    名字服务
    */
    string ensName = 3 ;
}
        
    
    /*
    任务的具体配置, http或脚本
    */
    CmdConfig cmd_config = 1 ;
    /*
    任务类型
    */
    string job_type = 2 ;
    /*
    更新权限
    */
    repeated string updateAuthorizers = 3 ;
    /*
    创建时间
    */
    string create_time = 4 ;
    /*
    scheduler task id
    */
    string id = 5 ;
    /*
    是否支持一次性任务
    */
    string task_type = 6 ;
    /*
    发起定时任务的源 id
    */
    string src_id = 7 ;
    /*
    job id
    */
    string job_id = 8 ;
    /*
    相关参数
    */
    Annotations annotations = 9 ;
    /*
    运行状态
    */
    int32 status = 10 ;
    /*
    更新时间
    */
    string update_time = 11 ;
    /*
    脚本类型
    */
    string cmd_type = 12 ;
    /*
    删除权限
    */
    repeated string deleteAuthorizers = 13 ;
    /*
    0 表示不禁用。1 表示禁用
    */
    int32 disable = 14 ;
    /*
    创建用户
    */
    string user = 15 ;
    /*
    定时时间：x/5 x x x x， 2018-09-04 15:56:23
    */
    string task_scheduler = 16 ;
    /*
    0 在页面可见，1 不可见
    */
    int32 invisible = 17 ;
    /*
    org
    */
    int32 org = 18 ;
    /*
    操作权限
    */
    repeated string operateAuthorizers = 19 ;
    /*
    定时任务名称
    */
    string name = 20 ;
    /*
    回调
    */
    Callback callback = 21 ;
    /*
    注明的名字服务
    */
    string assignner = 22 ;
    /*
    返回信息。{u'message': u'Success', u'code': 0, u'data': {u'execId': u'201809_task155123648b640b916475'}, u'error': u'\u6210\u529f\u3002Success'}
    */
    string error = 23 ;
}

